--- a/catkin_ws/src/beginner_tutorials/CMakeLists.txt
+++ b/catkin_ws/src/beginner_tutorials/CMakeLists.txt
@@ -104,7 +104,7 @@ add_service_files(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES beginner_tutorials
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS roscpp rospy message_runtime std_msgs
 #  DEPENDS system_lib
 )
 
