--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#ROS bag files
+*.bag
+*bag.active
+*.bag.partial
+*.bag.backup
+*.log.bag
+*.db3
+*.db-wal
+*.db-shm
